<resources>
    <string name="app_name">Summit</string>
    <string name="welcome">Welcome</string>
    <string name="summits">Summits</string>
    <string name="to_climb">To Climb</string>
    <string name="climbed">Bagged</string>
    <string name="add_new">Add new</string>
    <string name="montblanc"></string>
    <string name="summit_button">Get high!</string>
    <string name="name">name</string>
    <string name="height">height</string>
    <string name="range">range</string>
    <string name="country">country</string>
    <string name="ToClimb">To Climb</string>
    <string name="Climbed">Bagged!</string>
    <string name="addNewMessage">Add a new summit</string>
    <string name="addNew">Add a new summit</string>
    <string name="editName">Summit name</string>
    <string name="editRange">Mountain range</string>
    <string name="editCountry">Country</string>
    <string name="editHeight">Height (m)</string>
    <string name="addNewSubmit">Submit</string>
    <string name="preference_file_key">My Summits</string>
    <string name="toggleClimb">Climbed</string>
    <string name="delete_button">delete</string>

</resources>
